<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">求职之路</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello&#x000A;</string>
    <string name="title_activity_loading">LoadingActivity</string>
    <string name="dialog">正在加載中&#8230;</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login_register_link">没有账号？ <a href="register">注册</a></string>
    <string name="login_label_signin">没有账号？</string>
    <string name="login_label_username">账号</string>
    <string name="login_username_hint">email或手机号</string>
    <string name="title_activity_guide_view">导航</string>
    <string name="login_label_password">密码</string>
    <string name="backtomain">暂不登录</string>
    <string name="register">注册</string>
    <string name="accountclear">注销账号</string>
    <string name="accountchange">更换账号</string>
    <string name="remeber_pass">是否记住密码</string>
    <string name="login_label">登录&#8230;</string>
    <string name="login_text">求职之路</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="register_label_username">*个人昵称：</string>
    <string name="register_hint_username">字母or数字</string>
    <string name="register_hint_pass">大于6位</string>
    <string name="register_label_pass">*&#160;&#160;密&#160;&#160;&#160;&#160;码&#160;&#160;：</string>
    <string name="register_confirm_pass">*确认密码：</string>
    <string name="email">*&#160;&#160;邮&#160;&#160;&#160;&#160;箱&#160;&#160;：</string>
    <string name="gender">*&#160;&#160;性&#160;&#160;&#160;&#160;别&#160;&#160;：</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="headSculpture">头像</string>
    <string name="int_dialog_notice">请选择你的兴趣爱好\(^o^)/~</string>
    <string name="read">阅读</string>
    <string name="sport">运动</string>
    <string name="news">新闻</string>
    <string name="travel">旅游</string>
    <string name="entertainment">娱乐</string>
    <string name="joke">笑话</string>
    <string name="game">游戏</string>
    <string name="comfirm">确定</string>
    <string name="null_"></string>
    <string name="interest">&#160;&#160;兴&#160;&#160;&#160;&#160;趣&#160;&#160;：</string>
    <string name="register_submit">注册</string>
    <string name="cancel">取消</string>
    <string name="title_activity_content">ContentActivity</string>
    <string name="back">返回</string>
    <string name="reflesh">刷新</string>
    <string name="title_activity_spilt_out">SpiltOutActivity</string>
    <string name="spilt">吐槽一下O(∩_∩)O~~</string>
    <string name="spilt_s">吐了个槽</string>
    <string name="split_title_text">有神马不开心的？说出来让大家开心一下</string>
    <string name="default_news">暂无数据</string>
    <string name="logining">正在登录ing……</string>
    <string name="title_activity_post">PostActivity</string>
    <string name="send">发送</string>
    <string name="maxcount">140</string>
    <string name="leftcount">剩余:</string>
    <string name="contomain">回到主界面</string>
    <string name="exit">退出</string>
    <string name="about">关于</string>
    <string name="about_banben">版本：1.0</string>
    <string name="about_member">小组成员：萧仪宗</string>
    <string name="about_time">时间： 2013、11、22</string>
    
    <string name="up">up</string>
    <string name="down">down</string>
    <string name="comment">Comments</string>
    <string name="comment_e">评论</string>
    <string name="writecomment">发表评论</string>
    <string name="comment_list">评论列表</string>
    <string name="hot_comment_list">人气评论</string>
    <string name="new_comment_list">最新评论</string>
    <string name="hot">hot</string>
    <string name="hot_defualt_tips">暂无最热评论</string>
    <string name="new_defualt_tips">暂无最新评论</string>
    
    <string name="pulltorefresh">下拉刷新</string>
    <string name="lasttimeofrefresh">上次刷新:01&#8211;01 10:10</string>
    <string name="loadnextten">正在玩命加载后面十条....</string>
    <string name="defaulttime">时间加载失败</string>
    <string name="personalcenter">个人中心</string>
    <string name="defaultname">你好，游客</string>
    <string name="myspilt">我的吐槽</string>
    <string name="mykeepping">我的收藏</string>
    <string name="mywish">猜你喜欢</string>
    <string name="everydaysub">每日话题</string>
    <string name="image_num_show_text">0/0</string>
    <string name="title_activity_comment">CommentActivity</string>
    
    <string name="mianjing">随便看看</string>

</resources>