<?xml version="1.0" encoding="utf-8"?>
<com.example.utils.SildingFinishLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/reg_act_sildingFinishLayout"
    android:background="@drawable/background_login"
     >
    
    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/bg_alibuybutton_selected"
        android:paddingRight="5.0dp"
        android:paddingLeft="5.0dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/title_back"
            android:gravity="center"
            android:text="@string/cancel"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/white"
            android:textSize="16.0sp"
            android:onClick="cancel"
            android:clickable="true"
             />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/title_comm"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:text="@string/register_submit"
            android:textColor="@color/white"
            android:textSize="16.0sp"
            android:onClick="register"
            android:clickable="true"
             />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/register_div"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_margin="15dip"
        android:background="@drawable/background_login_div_bg"
        android:orientation="vertical"
        android:padding="15dip" >

        <LinearLayout
            android:id="@+id/LinL_num1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/register_label_user_TextView"
                style="@style/normalText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/register_label_username" />

            <EditText
                android:id="@+id/register_username_edit"
                android:digits="0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:hint="@string/register_hint_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                
                android:inputType="text"
                android:singleLine="true" >

                <requestFocus />
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinL_num2"
            
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/register_pass_textView"
                style="@style/normalText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_label_pass" />

            <EditText
                android:id="@+id/register_pass_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/register_hint_pass"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinL_num3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/register_pass_confirm_TextView"
                style="@style/normalText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_confirm_pass" />

            <EditText
                android:id="@+id/register_pass_confirm_edit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinL_num4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/register_email_textView"
                style="@style/normalText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email" />

            <EditText
                android:id="@+id/register_email_edit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinL_num5"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/register_gender_label"
                style="@style/normalText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender" />

            <RadioGroup
                android:id="@+id/register_groupRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/register_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female" />

                <RadioButton
                    android:id="@+id/register_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male" />
            </RadioGroup>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/LinL_num6"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/register_headSculpture_imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:src="@drawable/logo"
                android:layout_weight="1"
                android:text="@string/email" />

            <Button
                android:id="@+id/register_headSculpture_but"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/headSculpture"
                />
        </LinearLayout>
    </LinearLayout>

</com.example.utils.SildingFinishLayout>